--- a/Script/script.tex
+++ b/Script/script.tex
@@ -267,13 +267,88 @@ With regard to some particular passages which seemed generally disliked, I confe
             }
             渐渐入夜，支教实践支队的几位同学正在一台一台地手动安装软件，为即将开始的支教活动做准备。机房窗外，刚下晚自习的 AP 背着包、抱着书，靠在窗边向里张望。
         }
-        \dialog[C0]{
+        \dialog[C1]{
             \direction{在不同进度的三台电脑前来回操作} 所以，这儿的终端管理软件是真的不能直接把软件包发下去吗？
         }
-        \dialog[C1]{
+        \dialog[C2]{
             \direction{在一台电脑前操作} 那样更慢。这里主机和从机本来连接就不大好，你看那边还有几台点一键开机没反应的。
         }
-
+        \dialog[C0]{
+            \direction{在另一台电脑前操作} 你们下好之后，记得拿个示例程序编译上传一下，教案里随便一个就行，只需要看看软件包有没有问题。\direction{看向窗外，发现了 AP} 外面那个同学好像很好奇的样子呢。
+        }
+        \stage{
+            【说明：此处对话细节有待进一步调整。假装已经把场景背景交代得很自然很清楚了。】
+        }
+        \stage{
+            AP 尴尬地转身走开，但又不甘心，又回头看了一眼。队员们看着他的背影，笑了一下，C3 前去拉住了他，带他进了机房。     
+        }
+        \dialog[C3]{
+            怎么，是好奇我们在干嘛吗？
+        }
+        \dialog[AP]{
+            \direction{尴尬} 嗯，我……我只是路过，看到你们在这儿，就想看看。
+        }
+        \dialog[C3]{
+            \direction{回到电脑前，插好 UNO 板，把自己的测试程序上传} 具体在做什么，等到后面的课程你就知道了。几天之后，你会掌握一些还算有点用处的技能的。
+        }
+        \stage{
+            AP 用力地点了点头，看着屏幕上跳动的图像和滚动的数字。
+        }
+    }
+    \scene{
+        \stage{
+            \textup{
+                \textbf{时间点\(\boldsymbol{P}\)}，Q中学机房。
+            }
+            自主设计阶段，AP 和同组的同学正在兴奋地讨论着他们的设计方案。这一组的指导助教 C3 在一旁默默地听着，同时在电脑上调试着自己的程序。
+        }
+        \dialog[D1]{
+            你说做个通信终端，可我们硬件就这么多了，应该很难攒出两台来吧。
+        }
+        \dialog[D2]{
+            而且，UNO 板也就这么大功率，通信信号估计不会太强哦。
+        }
+        \dialog[D3]{
+            咱们又没有专业的通信天线，噪声估计能把信号给淹没了都。通用的那些通信协议也不是那么容易实现的。
+        }
+        \dialog[D0]{
+            \direction{拿着设计草稿} 但是，要就只是拿板子控制几个LED亮起来灭掉，这也太没意思了吧。我还是觉得该做点有意思的事情，这些问题 C3 老师肯定能帮我们解决的。\direction{笃定，看向 C3}
+        }
+        \dialog[C3]{
+            \direction{突然听到自己的名字} 嗯？我咋啦？
+        }
+        \dialog[D0]{
+            没咋没咋。\direction{看到 C3 的电脑屏幕} 老师你在调什么程序呢？
+        }
+        \dialog[C3]{
+            \direction{指着屏幕} 挺基础的一个程序啦，就只是把汉字编码成二进制串。我在考虑怎么把这个串再压缩压缩。
+        }
+        \dialog[D0]{
+            \direction{灵光一闪} 不是只够做一个终端的吗？干脆我们直接把自己的信息编码成二进制串，然后发射到太空中去！
+        }
+        \stage{
+            总之众人一顿附和。C3 也被他们的热情感染，开始帮助他们调试程序。
+        }
+    }
+    \scene{
+        \stage{
+            \textup{
+                \textbf{时间点\(\boldsymbol{P}\)}，Q中学操场。
+            }
+            结营展示当天，AP 组的作品被特别放在最后展示。前面的作品展示完毕后，大家从礼堂走上操场，AP 组的同学们在操场中央的展示区域前等待着。大家围成一个大圈，把他们围在中间。
+        }
+        \dialog[主持人]{
+            \direction{在中央} 接下来，我们有一个特别的展示，之后就是最后的颁奖环节。下面，我们先把时间给到操场上等待着的同学们！
+        }
+        \stage{
+            众人鼓掌。AP 带着发射装置走上展示区域，向四周的观众鞠躬。C3 也走上去，向观众们挥手致意。
+        }
+        \dialog[AP]{
+            \direction{向观众们展示，介绍作品的设计动机、技术细节和功能特点} （暂略）
+        }
+        \stage{
+            众人鼓掌。AP 和 C3 一起将板子和电脑连接好，将放大天线接上电源。一切准备就绪，在高涨的气氛中，AP 用摇杆将信号输入设备，传入高空。
+        }
     }
 }
 
